# nemospawn

./: CLAUDE.md  GUIDE.md  README.md  TODO.md  pyproject.toml
src/nemospawn/: __init__.py  __main__.py
src/nemospawn/cli/: __init__.py  artifact.py  auth.py  board.py  cluster.py  config.py  cost.py  gpu.py  hpo.py  inbox.py  launch.py  lifecycle.py  ngc.py  nim.py  plan.py  profile.py  schedule.py  skill.py  slurm.py  snapshot.py  spawn.py  task.py  team.py  watch.py  workspace.py
src/nemospawn/core/: adaptive.py  audit.py  auth.py  config.py  costs.py  lifecycle.py  models.py  plan.py  profiles.py  settings.py  skill.py  snapshot.py  state.py  watcher.py
src/nemospawn/federation/: __init__.py  cluster.py
src/nemospawn/gpu/: dcgm.py  discovery.py  health.py  topology.py
src/nemospawn/hpo/: __init__.py  study.py
src/nemospawn/messaging/: inbox.py  transport.py
src/nemospawn/nemo/: __init__.py  artifacts.py  config.py  scheduler.py
src/nemospawn/ngc/: __init__.py  (+1 more)
tests/: conftest.py  test_adaptive.py  test_auth.py  test_cli.py  test_coordination.py  test_costs.py  test_dcgm.py  test_federation.py  test_gpu_discovery.py  test_hpo.py  test_inbox.py  test_leader_prompt.py  test_lifecycle.py  test_models.py  test_nemo.py  test_ngc.py  test_nim.py  test_observability.py  test_openshell.py  test_plan.py  test_profiles_extended.py  test_settings.py  test_skill.py  test_slurm.py  test_snapshot.py  test_state.py  test_task.py  test_templates.py  test_tmux.py  test_topology.py  test_transport.py  test_watcher.py  test_web.py  test_workspace.py  test_worktree.py
(+19 files in other folders)
